# chinese-wine-classify

./: .cursorignore  .gitignore  README.md  cleaned_wine_data.csv  group_wine_data.py  interp.py  main.ipynb  pyproject.toml  result.csv  test.ipynb  transport.py  wine_classifier.py  wine_classifier_cnn.py  wine_classifier_feature_choose.py  wine_inference.py  按连续频率把样本分组到sample.csv  插值+平均补齐到120Hz.csv  频率数据宽表.csv
models/: .gitignore  README.md  best_wine_classifier.pth  预测结果.xlsx
